# Computational-Intelligence

lab1/: README.md  solution.ipynb  solution.py
lab2/: README.md  population.py  solution.ipynb
lab3/: README.md  agent.py  evo_rule_strategy.py  expert_strategy.py  minmax.py  nim.py  nim_oxford.py  solution.ipynb  utility.py
lab3/data/: RL_agent-4.data  RL_agent-5.data  RL_agent.data  er_agent-4.data  er_agent-5.data  er_agent.data  evolved_agent-4.data  evolved_agent-5.data  evolved_agent.data
minmax/: minimax.ipynb
simulated-annealing/: pyproject.toml  simulation.ipynb
